--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~9.0.6",
-    "@angular/common": "~9.0.6",
+    "@angular/common": "^9.0.7",
     "@angular/compiler": "~9.0.6",
-    "@angular/core": "~9.0.6",
+    "@angular/core": "^9.0.7",
     "@angular/forms": "~9.0.6",
     "@angular/platform-browser": "~9.0.6",
     "@angular/platform-browser-dynamic": "~9.0.6",
